--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 </head>
 
 <body>
-  <section>
-    <div class="card1">
+  <main>
+
+    <section class="card1">
 
       <img src="./images/icon-sedans.svg">
     
@@ -29,37 +30,35 @@
 
       <button id="button-1">Learn More</button>
     
+    </section>
 
-    </div>
-    <div class="card2">
+    <section class="card2">
 
       <img src="./images/icon-suvs.svg">
 
-      <h1>SUVs</h1>
+      <h2>SUVs</h2>
 
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
         and off-road adventures.</p>
 
       <button id="button-2">Learn More</button>
 
-    </div>
-    <div class="card3">
+      </section>
+
+    <section class="card3">
 
       <img src="./images/icon-luxury.svg">
 
-      <h1>LUXURY</h1>
+      <h2>LUXURY</h2>
 
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
         rental and arrive in style.</p>
 
       <button id="button-3">Learn More</button>
-    </div>
-  </section>
+      </section>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Amina Ked</a>.
-  </div>
+  </main>
+
 </body>
 
 </html>
